--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ bcrypt==4.1.2
 openpyxl==3.1.5
 reportlab==3.6.8
 tabulate==0.9.0
+mysql-connector-python
+plotly
+gunicorn # Para ejecutar tu aplicación en producción
+python-dotenv # Opcional, pero útil para variables de entorno
